fix for broken css at line 141

--- a/src/main/index.css
+++ b/src/main/index.css
@@ -138,7 +138,7 @@ header {
 
 .card-body .btn-unique {
   background-color: var(--theme-2) !important;
-  color: var() var(--c-white);
+  color: var(--c-white);
 }
 
 /* .card--carousel {
